fixing z-index for textboxes

--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -50,7 +50,9 @@ footer {
     padding: 24px;
     display: flex;
     flex-direction: column;
-    justify-content: center; }
+    justify-content: center;
+    position: relative;
+    z-index: 100; }
     .container .textbox .pink-txt:hover {
       color: #e08b98; }
     .container .textbox .blue-txt:hover {
@@ -59,36 +61,31 @@ footer {
       color: #cc8b00; }
   .container .one {
     grid-column: 5/9;
-    grid-row: 3/6;
-    z-index: 100; }
+    grid-row: 3/6; }
   .container .imgone {
     grid-column: 1/6;
     grid-row: 1/5; }
   .container .two {
     grid-column: 1/4;
-    grid-row: 6/10;
-    z-index: 100; }
+    grid-row: 6/10; }
   .container .imgtwo {
     grid-column: 4/8;
     grid-row: 5/8; }
   .container .three {
     grid-column: 5/9;
-    grid-row: 10/13;
-    z-index: 100; }
+    grid-row: 10/13; }
   .container .imgthree {
     grid-column: 1/6;
     grid-row: 9/14; }
   .container .four {
     grid-column: 1/4;
-    grid-row: 14/18;
-    z-index: 100; }
+    grid-row: 14/18; }
   .container .imgfour {
     grid-column: 4/9;
     grid-row: 13/16; }
   .container .five {
     grid-column: 4/8;
-    grid-row: 21/24;
-    z-index: 100; }
+    grid-row: 21/24; }
   .container .imgfive {
     grid-column: 1/5;
     grid-row: 17/23; }
